--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fabpot/goutte": "^4.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "3.5.5"
+        "squizlabs/php_codesniffer": "3.5.5",
+        "phpdocumentor/phpdocumentor": "2.*"
     }
 }
