--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "3.5.5",
         "phpdocumentor/phpdocumentor": "2.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Scraper\\": "src/Scraper"
+        }
     }
 }
